# monitoring

./: .clang-format  CMakeLists.txt  README.md  build.sh  memcheck.sh  run_device.sh  run_gateway.sh
device/: CMakeLists.txt  main.cpp
device-gateway/: CMakeLists.txt  base_consumer.hpp  data_details.hpp  data_handler.cpp  data_handler.hpp  main.cpp  mqtt_consumer.cpp  mqtt_consumer.hpp
